[package]
name = "hyprshell-hyprland-macros"
description = "Macros used in hyprland-rs"
version = "4.5.0"
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2021"
homepage = "https://github.com/hyprland-community/hyprland-rs/tree/master/hyprland-macros"
repository = "https://github.com/hyprland-community/hyprland-rs"

[package.metadata.nix]
build = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing"]}
quote = "1"
proc-macro2 = "1"
